<resources>
    <string name="app_name">AndroidProject</string>
    <string name="e_mail">Enter your e-mail</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up_here">Don\'t have account? \nSign up here.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_textView">Already have an account? \nLogin here.</string>
</resources>