<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.androidproject.presentation.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="96dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/emailSignUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/e_mail"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                app:addTextChangedListener="@{viewModel.emailTextWatcher()}" />

            <EditText
                android:id="@+id/passwordSignUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailSignUpText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                app:addTextChangedListener="@{viewModel.passwordTextWatcher()}" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordSignUpText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button_transparent"
                android:onClick="@{viewModel::onLoginBtnClick}"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUpButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/sign_up_textView"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>